# Windroid-box64

./: CMakeLists.txt  README-ARM64.md
.github/: micewinerelease.yml
.github/workflows/: build-micewine.yml  release.yml
src/: arm64_features.c
src/dynarec/arm64/: Makefile  arm64_regalloc.c  arm64_regalloc.h  dynarec_arm64_00.c  dynarec_arm64_private.h
src/include/: arm64_features.h  debug.h
wow64/: CMakeLists.txt  wowbox64.c
